just another background, will later provide several resolutions, just for testing in 1920x0180.

--- a/YourOwnGame/app/src/main/res/values/styles.xml
+++ b/YourOwnGame/app/src/main/res/values/styles.xml
@@ -84,7 +84,7 @@
 
     <!-- Button white/black -->
     <style name="menu_btn_white">
-        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textColor">@color/colorBlack</item>
         <item name="android:textSize">20sp</item>
         <item name="android:layout_width">200dp</item>
         <item name="android:layout_height">35dp</item>
