--- a/YourOwnGame/app/src/main/res/drawable/btn_menu_white.xml
+++ b/YourOwnGame/app/src/main/res/drawable/btn_menu_white.xml
@@ -4,7 +4,7 @@
         android:radius="14dp"
         />
     <solid
-        android:color="#033550"
+        android:color="#ffffff"
         />
     <padding
         android:left="0dp"
