--- a/YourOwnGame/app/src/main/res/layout/activity_main.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_main.xml
@@ -38,21 +38,19 @@
 
     <LinearLayout
         android:id="@+id/mainActivity_btnList"
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="45dp"
-        android:gravity="center_vertical|center"
+        android:layout_marginBottom="56dp"
+        android:layout_marginStart="0dp"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/mainActivity_btnStartGame"
             style="@style/menu_btn_white"
             android:layout_width="208dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="10dp"
             android:layout_marginEnd="10dp"
             android:onClick="startAdventureMode"
             android:text="@string/mainActivity_button_mode_adventure" />
@@ -61,7 +59,6 @@
             android:id="@+id/mainActivity_btnHighscore"
             style="@style/menu_btn_white"
             android:layout_width="162dp"
-            android:layout_marginTop="15dp"
             android:onClick="showHighscore"
             android:text="@string/mainActivity_button_highscores" />
     </LinearLayout>
