--- a/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
@@ -22,6 +22,17 @@
         android:layout_height="match_parent">
 
         <ImageView
+            android:onClick="pauseGame"
+            android:src="@drawable/btn_pause"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <ImageView
             android:id="@+id/gameViewActivity_pointsLbl"
             android:layout_width="64dp"
             android:layout_height="64dp"
