--- a/YourOwnGame/app/src/main/res/layout/activity_highscore.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_highscore.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:background="@color/colorBlack"
     android:id="@+id/highscoreActivity_RL"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@color/colorSkyBlue">
 
     <TextView
         style="@style/heading_1"
