--- a/YourOwnGame/app/src/main/res/layout/activity_main.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,9 @@
         android:layout_height="48dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_marginBottom="56dp"
+        android:layout_marginLeft="0dp"
         android:layout_marginStart="0dp"
         android:gravity="center"
         android:orientation="horizontal">
@@ -51,6 +53,7 @@
             android:id="@+id/mainActivity_btnStartGame"
             style="@style/menu_btn_white"
             android:layout_width="208dp"
+            android:layout_marginRight="10dp"
             android:layout_marginEnd="10dp"
             android:onClick="startAdventureMode"
             android:text="@string/mainActivity_button_mode_adventure" />
