--- a/YourOwnGame/app/src/main/res/layout/dialog_level_achieved.xml
+++ b/YourOwnGame/app/src/main/res/layout/dialog_level_achieved.xml
@@ -35,7 +35,7 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="30dp"
                 android:paddingRight="30dp"
-                app:srcCompat="@drawable/meloon" />
+                app:srcCompat="@drawable/fruit_meloon" />
 
             <ImageView
                 android:id="@+id/avociImageView"
