--- a/YourOwnGame/app/src/main/res/layout/dialog_level_information.xml
+++ b/YourOwnGame/app/src/main/res/layout/dialog_level_information.xml
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            app:srcCompat="@drawable/meloon" />
+            app:srcCompat="@drawable/fruit_meloon" />
 
         <ImageView
             android:id="@+id/pinapoAvailable"
