--- a/YourOwnGame/app/src/main/res/layout/activity_main.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_main.xml
@@ -50,13 +50,21 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/mainActivity_btnStartGame"
+            android:id="@+id/mainActivity_btnStartAdventure"
             style="@style/menu_btn_white"
             android:layout_width="208dp"
             android:layout_marginRight="10dp"
             android:layout_marginEnd="10dp"
             android:onClick="startAdventureMode"
             android:text="@string/mainActivity_button_mode_adventure" />
+        <Button
+            android:id="@+id/mainActivity_btnStartSurvival"
+            style="@style/menu_btn_white"
+            android:layout_width="208dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
+            android:onClick="startSurvivalMode"
+            android:text="@string/mainActivity_button_mode_survival" />
 
         <!-- For adventure mode we don't need a highscore (only gather fruits and buy sth.)
 
