--- a/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
+++ b/YourOwnGame/app/src/main/res/layout/activity_game_view.xml
@@ -11,9 +11,9 @@
     android:layout_centerVertical="true"
     android:background="@color/colorShadow">
 
-
+    <!-- When changing belows Id you also have to change the id name of the worldview in activity_world -->
     <yourowngame.com.yourowngame.gameEngine.surfaces.GameView
-        android:id="@+id/gameViewActivity_gameView"
+        android:id="@+id/drawableSurfaceActivity_surface"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
